# microsurf

./: .gitignore  .gitmodules  CITATION.bib  Dockerfile  LICENSE  Makefile  aes-enc-500.pickle  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: pytest.yml
binaries/nosecret/: nosecret.c
binaries/random/: checkrandom.c
binaries/secret0/: readme.md  secret-dep.json  secret.c
binaries/secret1/: Makefile  readme.md  secret-dep.json  secret.c
doc/: .gitignore  advanced.md  conf.py  contents.rst  control-flow.md  index.rst  modules.md  quickstart.md
doc/examples/: bearssl.py  botan.py  example-openssl.py  log.txt  mbed-tls-crypto.py  mbedTLS.py  openssl-advanced.py  openssl-camellia-128.py  openssl-camilla-128.py  openssl-from-file.py  openssl.py  readme.md  simpleArg.py  toy-aes.py  wolfssl.py
doc/examples/rootfs/bearssl/jail-bearssl-arm64/: test_aes  test_aes_base
doc/examples/rootfs/bearssl/jail-bearssl-mipsel32/: test_aes  test_aes_base
doc/examples/rootfs/bearssl/jail-bearssl-riscv64/: test_aes  test_aes_base
doc/examples/rootfs/bearssl/jail-bearssl-x8664/: test_aes  test_aes_base  test_aes_ni  test_rsa
doc/examples/rootfs/botan/: README.md  jail-botan-arm6
doc/examples/rootfs/botan/jail-botan-arm64/: BUILDINFO  botan
doc/examples/rootfs/botan/jail-botan-armv4/: botan
doc/examples/rootfs/botan/jail-botan-armv7/: botan
doc/examples/rootfs/botan/jail-botan-mipsel32/: botan
doc/examples/rootfs/botan/jail-botan-riscv64/: BUILDINFO  botan
doc/examples/rootfs/botan/jail-botan-x8664/: BUILDINFO  botan
doc/examples/rootfs/jail-mbedtls-arm64/: crypt_and_hash
doc/examples/rootfs/jail-openssl-arm64/: config.txt  filename.pickle  openssl
doc/examples/rootfs/jail-openssl-mipsel32/: config.txt  openssl
doc/examples/rootfs/jail-openssl-riscv64/: config.txt  openssl
doc/examples/rootfs/jail-openssl-x8632/: config.txt  openssl  results.md
doc/examples/rootfs/jail-openssl-x8664/: config.txt  openssl
doc/examples/rootfs/jail-openssl-x8664-O3/: openssl
doc/examples/rootfs/jail-toy-aes32/: aes_invertkeyexpand  aes_keyexpand  aes_process
doc/examples/rootfs/mbedtls/: README.md
doc/examples/rootfs/openssl/: README.md
docs/: advanced.md  compiler.md  conf.py  contents.rst  control-flow.md  faq.md  generators.md  index.rst  installation.md  memory.md  modules.md  quickstart.md
docs/examples/: openssl.py
docs/examples/rootfs/openssl/: README.md
eval-scripts/: Dockerfile  README.md  algomap.json  builder.py  clean.sh  config.json  create-cluster.sh  query.py  workflow-input.json
eval-scripts/botan-builder/: driver.c
eval-scripts/compare-builder/: Makefile  lib.c  main.c
eval-scripts/haclutil-builder/: Makefile  cmp_bytes.c
eval-scripts/k8s-config/: pvol-claim.yaml  pvol.yaml
eval-scripts/mbedtls-builder/: driver.c
eval-scripts/openssl-builder/: driver.c
eval-scripts/opensslutils-builder/: Makefile  cpuid.c  cpuid.h  main.c
eval-scripts/wolfssl-builder/: driver.c
eval-scripts/workflow/: get-results.yaml  workflow.yaml
microsurf/: microsurf.py
microsurf/pipeline/: Executor.py  LeakageModels.py  Stages.py
microsurf/pipeline/tracetools/: Trace.py
microsurf/tests/: test_binary_loader.py  test_fix_random.py  test_no_secret.py  test_secret0.py  test_secret1.py
microsurf/utils/: hijack.py  logger.py
results/sample-report/: results.html  results.json  results.md
src/microsurf/: __init__.py  __main__.py  microsurf.py
src/microsurf/pipeline/: DetectionModules.py  Executor.py  LeakageModels.py  NeuralLeakage.py  Stages.py
src/microsurf/pipeline/tracetools/: Trace.py
src/microsurf/utils/: elf.py  generators.py  hijack.py  logger.py  rayhelpers.py  report.py
tests/: Makefile  test_binary_loader.py  test_cf_1.py  test_cf_1_neural.py  test_data_1.py  test_data_1_neural.py  test_fix_random.py  test_no_secret.py  test_secret0.py  test_secret1.py  test_secret_simple.py  test_secret_stochastic.py
tests/binaries/hexbitop/: Makefile  secret-dep.json  secret.c
tests/binaries/multipc/: Makefile  nosecret.c
tests/binaries/nosecret/: readme.md  secret-dep.json
tests/binaries/random/: Makefile  checkrandom.c
tests/binaries/secret-dep-cf-1/: Makefile  secret-dep-cf-1.c  secret-dep.json
tests/binaries/secret-dep-mem-1/: Makefile  readme.md  secret-dep-mem-1.c  secret-dep.json
tests/binaries/secret0/: readme.md
tests/binaries/secret1/: Makefile  secret.c
(+73 files in other folders)
