[metadata]
name = microsurf
description = microsurf: An architecture independent dynamic side channel analysis framework
author = Nicolas Dutly
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = 
    microsurf
    microsurf.pipeline
    microsurf.pipeline.tracetools
    microsurf.utils
package_dir =
    =src


install_requires =
    attrs
    capstone==5.0.0
    colorama
    commonmark
    cryptography
    cycler
    dill
    enum-compat
    fonttools
    future
    gevent
    gitdb
    GitPython
    greenlet
    iniconfig
    joblib
    keystone-engine
    kiwisolver
    matplotlib
    mine @ https://github.com/Jumpst3r/mine-pytorch/archive/refs/heads/master.zip
    multiprocess
    numpy
    packaging
    pandas
    pefile
    Pillow
    pluggy
    protobuf==3.19.4
    py
    pyelftools
    Pygments
    pyparsing
    python-dateutil
    python-magic
    python-registry
    pytz
    PyYAML
    qiling @ https://github.com/qilingframework/qiling/archive/1c5ef83c68f08b8de4cd9df515656cb1a692ece0.zip
    rich
    scikit-learn
    scipy
    seaborn
    statsmodels
    six
    sklearn
    smmap
    sortedcontainers
    ray
    termcolor
    threadpoolctl
    tabulate
    tomli
    tornado
    tqdm
    unicodecsv
    zope.event
    zope.interface
python_requires = 
    >=3.9

zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-rerunfailures>=10.2
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160
