[metadata]
name = microsurf
description = microsurf: An architecture independent dynamic side channel analysis framework
author = Nicolas Dutly
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = 
    microsurf
    microsurf.pipeline
    microsurf.pipeline.tracetools
    microsurf.utils
package_dir =
    =src


install_requires =
    attrs
    capstone==5.0.0
    colorama
    commonmark
    cryptography
    cycler
    dill
    enum-compat
    fonttools
    future
    gevent
    gitdb
    GitPython
    greenlet
    iniconfig
    joblib
    keystone-engine
    kiwisolver
    multiprocess
    numpy
    pandas
    pefile
    Pillow
    pluggy
    py
    pyelftools
    Pygments
    pyparsing
    python-dateutil
    python-magic
    python-registry
    pytz
    PyYAML
    qiling @ https://github.com/qilingframework/qiling/archive/34b4898dfebf6a63268fdaf535c5a0a797ee431f.zip
    rich
    scipy
    statsmodels
    six
    scikit-learn
    smmap
    markdown
    sortedcontainers
    ray==1.13.0
    termcolor
    threadpoolctl
    tabulate
    tornado
    tqdm
    unicodecsv
    zope.event
    zope.interface
python_requires = 
    >=3.9

zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-rerunfailures>=10.2
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160
